--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta name="description"
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
-    <meta property="og:title" content="Hub HTML template">
+    <meta property="og:title" content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:description"
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:type" content="website">
@@ -1787,7 +1787,7 @@
                                         <div class="screen-reader-response">
                                             <p role="status" aria-live="polite" aria-atomic="true"></p>
                                         </div>
-                                        <form action="https://hubhtml.liquid-themes.com/assets/php/mailer.php"
+                                        <form action=""
                                             method="post" class="lqd-cf-form" novalidate="novalidate"
                                             data-status="init">
                                             <p>
@@ -2068,7 +2068,7 @@
                                 <div class="screen-reader-response">
                                     <p role="status" aria-live="polite" aria-atomic="true"></p>
                                 </div>
-                                <form action="https://hubhtml.liquid-themes.com/assets/php/mailer.php" method="post"
+                                <form action="" method="post"
                                     class="lqd-cf-form" novalidate="novalidate" data-status="init">
                                     <div class="row -mr-15 -ml-15">
                                         <div class="col col-md-6 col-12 px-15">
