--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <header id="site-header" class="main-header sticky-header-noshadow" data-sticky-header="true"
             data-sticky-values-measured="false" data-sticky-options='{"disableOnMobile": true, "dynamicColors": true}'>
             <div class="lqd-head-sec-wrap w-full pt-20 px-75 module-header">
-                <div class="flex items-center justify-between rounded-4 shadow-black-15 px-25 bg-white m-0">
+                <div class="flex items-center justify-between rounded-4 shadow-black-15 px-25 bg-white m-0 mobile_header">
                     <div class="w-30percent flex items-center p-0 sm:w-50percent">
                         <div class="module-logo flex navbar-brand-plain py-15"><a class="navbar-brand flex p-0 relative"
                                 href="#" rel="home"><span class="navbar-brand-inner post-rel"><img class="logo-default"
