--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
                                             <div class="lqd-section-flow-item flex items-center">
                                                 <div class="lqd-section-flow-item-inner">
                                                     <div class="lqd-section-flow-content-mobile mb-30"><img
-                                                            src="assets/images/demo/asymmetric-9/section-flow/acc-img-1.jpg"
+                                                            src="assets/images/scroll1.svg"
                                                             title="section-flow-1" alt="section-flow-1"></div>
                                                     <div class="flex flex-wrap py-20percent">
                                                         <div
@@ -1281,7 +1281,7 @@
                                             <div class="lqd-section-flow-item flex items-center">
                                                 <div class="lqd-section-flow-item-inner">
                                                     <div class="lqd-section-flow-content-mobile mb-30"><img
-                                                            src="assets/images/demo/asymmetric-9/section-flow/Img.jpg"
+                                                            src="assets/images/scroll2.svg"
                                                             title="Img" alt="Img"></div>
                                                     <div class="flex flex-wrap py-20percent">
                                                         <div
@@ -1312,7 +1312,7 @@
                                             <div class="lqd-section-flow-item flex items-center">
                                                 <div class="lqd-section-flow-item-inner">
                                                     <div class="lqd-section-flow-content-mobile mb-30"><img
-                                                            src="assets/images/demo/asymmetric-9/section-flow/Img-1.jpg"
+                                                            src="assets/images/scroll3.svg"
                                                             title="Img-1" alt="Img-1"></div>
                                                     <div class="flex flex-wrap py-20percent">
                                                         <div
@@ -1981,7 +1981,7 @@
                     </div>
                 </div>
             </section>
-            <section class="lqd-section module-info pt-50 pb-90">
+            <section class="lqd-section module-info pt-30 pb-30">
                 <div class="container">
                     <div class="row items-center">
                         <div class="col-12 col-md-4 module-col">
