home page update

--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
                             <nav class="navbar-collapse lqd-submenu-default-style inline-flex p-0 text-14 font-medium"
                                 aria-expanded="false">
                                 <ul class="main-nav main-nav-hover-fade-inactive link-black flex reset-ul justify-center"
-                                    itemtype="http://schema.org/SiteNavigationElement" itemscope="itemscope"
+                                    itemtype="" itemscope="itemscope"
                                     data-submenu-options='{"toggleType": "fade", "handler": "mouse-in-out"}'
                                     data-localscroll="true"
                                     data-localscroll-options='{"itemsSelector":">li > a", "offset": 85}'>
-                                    <li><a href="#">Wayfinding</a></li>
-                                    <!-- <li><a href="#our-services">Our Services <span
-                                                class="link-icon inline-flex hide-if-empty right-icon"><i
-                                                    class="lqd-icn-ess icon-ion-ios-arrow-down"></i></span></a></li> -->
+                                    <li><a href="#">Home</a></li>
+                                     <li><a href="#">Wayfinding</a></li>
                                     <li><a href="#">Signage</a></li>
                                     <li><a href="#">Industries</a></li>
                                     <li><a href="#">Products</a></li>
@@ -148,16 +146,23 @@
                                                             aria-expanded="false" role="navigation">
                                                             <ul class="link-black main-nav flex reset-ul lqd-menu-counter-right lqd-menu-items-block main-nav-hover-fade-inactive"
                                                                 data-submenu-options='{"toggleType": "slide", "handler": "click"}'>
-                                                                <li><a class="text-38" href="#">Wayfinding</a>
+                                                                <li>
+                                                                    <a class="text-38" href="#">Home</a>
                                                                 </li>
-                                                                <li><a class="text-38" href="#"><span>Our
+                                                                 <li>
+                                                                    <a class="text-38" href="#">Wayfinding</a>
+                                                                </li>
+                                                                <li>
+                                                                    <a class="text-38" href="#"><span>Our
                                                                             Signage</span></a>
                                                                 </li>
-                                                                <li><a class="text-38"
+                                                                <li>
+                                                                    <a class="text-38"
                                                                         href="#"><span>Industries</span>
                                                                         </a>
                                                                 </li>
-                                                                <li><a class="text-38"
+                                                                <li>
+                                                                    <a class="text-38"
                                                                         href="#"><span>Products</span>
                                                                         </a>
                                                                 </li>
@@ -243,6 +248,7 @@
                                                     data-submenu-options='{"toggleType": "slide", "handler": "click"}'
                                                     data-localscroll="true"
                                                     data-localscroll-options='{"itemsSelector":">li > a", "offset": 85}'>
+                                                    <li><a class="text-38" href="#">Home</a></li>
                                                     <li><a class="text-38" href="#">Wayfinder</a></li>
                                                     <li><a class="text-38" href="#">Signage
                                                         </a>
@@ -1887,6 +1893,9 @@
                             </div>
                             <div class="lqd-fancy-menu lqd-custom-menu relative lqd-menu-td-none">
                                 <ul class="reset-ul link-15">
+                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                                class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
+                                            Home</a></li>
                                     <li class="mb-20"><a class="text-white-70" href="#"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Wayfinding</a></li>
