--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="flex items-center justify-between rounded-4 shadow-black-15 px-25 bg-white m-0 mobile_header">
                     <div class="w-30percent flex items-center p-0 sm:w-50percent">
                         <div class="module-logo flex navbar-brand-plain py-15"><a class="navbar-brand flex p-0 relative"
-                                href="#" rel="home"><span class="navbar-brand-inner post-rel"><img class="logo-default"
+                                href="./" rel="home"><span class="navbar-brand-inner post-rel"><img class="logo-default"
                                         src="./assets/images/logo.png" alt="Asymmetric nine"></span></a></div>
                     </div>
                     <div class="flex justify-center lg:hidden p-0">
@@ -52,10 +52,10 @@
                                     data-submenu-options='{"toggleType": "fade", "handler": "mouse-in-out"}'
                                     data-localscroll="true"
                                     data-localscroll-options='{"itemsSelector":">li > a", "offset": 85}'>
-                                    <li><a href="#">Home</a></li>
-                                     <li><a href="#">Wayfinding</a></li>
-                                    <li><a href="#">Signage</a></li>
-                                    <li><a href="#">Industries</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                     <li><a href="wayfinding.html">Wayfinding</a></li>
+                                    <li><a href="signage.html">Signage</a></li>
+                                    <li><a href="industries.html">Industries</a></li>
                                     <li><a href="#">Products</a></li>
                                 </ul>
                             </nav>
@@ -147,23 +147,23 @@
                                                             <ul class="link-black main-nav flex reset-ul lqd-menu-counter-right lqd-menu-items-block main-nav-hover-fade-inactive"
                                                                 data-submenu-options='{"toggleType": "slide", "handler": "click"}'>
                                                                 <li>
-                                                                    <a class="text-38" href="#">Home</a>
+                                                                    <a class="text-38" href="index.html">Home</a>
                                                                 </li>
                                                                  <li>
-                                                                    <a class="text-38" href="#">Wayfinding</a>
+                                                                    <a class="text-38" href="wayfinding.html">Wayfinding</a>
                                                                 </li>
                                                                 <li>
-                                                                    <a class="text-38" href="#"><span>Our
+                                                                    <a class="text-38" href="signage.html"><span>Our
                                                                             Signage</span></a>
                                                                 </li>
                                                                 <li>
                                                                     <a class="text-38"
-                                                                        href="#"><span>Industries</span>
+                                                                        href="industries.html"><span>Industries</span>
                                                                         </a>
                                                                 </li>
                                                                 <li>
                                                                     <a class="text-38"
-                                                                        href="#"><span>Products</span>
+                                                                        href="products.html"><span>Products</span>
                                                                         </a>
                                                                 </li>
 
@@ -248,14 +248,14 @@
                                                     data-submenu-options='{"toggleType": "slide", "handler": "click"}'
                                                     data-localscroll="true"
                                                     data-localscroll-options='{"itemsSelector":">li > a", "offset": 85}'>
-                                                    <li><a class="text-38" href="#">Home</a></li>
-                                                    <li><a class="text-38" href="#">Wayfinder</a></li>
-                                                    <li><a class="text-38" href="#">Signage
+                                                    <li><a class="text-38" href="index.html">Home</a></li>
+                                                    <li><a class="text-38" href="wayfinding.html">Wayfinder</a></li>
+                                                    <li><a class="text-38" href="signage.html">Signage
                                                         </a>
                                                     </li>
-                                                    <li><a class="text-38" href="#">Industries </a>
+                                                    <li><a class="text-38" href="industries.html">Industries </a>
                                                     </li>
-                                                    <li><a class="text-38" href="#">Products </a>
+                                                    <li><a class="text-38" href="products.html">Products </a>
                                                     </li>
 
                                                 </ul>
