--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
     <meta property="og:description"
         content="Hub is a HTML template with high performance, and award-winning design collection.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/images/common/og-image.jpg">
+    <meta property="image" content="./assets/images/common/MVG.jpg">
     <link rel="stylesheet" href="assets/vendors/liquid-icon/lqd-essentials/lqd-essentials.min.css">
     <link rel="stylesheet" href="assets/css/theme.min.css">
     <link rel="stylesheet" href="assets/css/utility.min.css">
