--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                      <li><a href="wayfinding.html">Wayfinding</a></li>
                                     <li><a href="signage.html">Signage</a></li>
                                     <li><a href="industries.html">Industries</a></li>
-                                    <li><a href="#">Products</a></li>
+                                    <li><a href="products.html">Products</a></li>
                                 </ul>
                             </nav>
                         </div>
