--- a/industries.html
+++ b/industries.html
@@ -17,6 +17,7 @@
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:type" content="website">
     <meta property="image" content="./assets/images/common/MVG.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/images/fav.png">
     <link rel="stylesheet" href="assets/vendors/liquid-icon/lqd-essentials/lqd-essentials.min.css">
     <link rel="stylesheet" href="assets/css/theme.min.css">
     <link rel="stylesheet" href="assets/css/utility.min.css">
