--- a/products.html
+++ b/products.html
@@ -3,18 +3,19 @@
 
 
 <head>
-    <meta charset="UTF-8">
+    meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="keywords"
-        content="HTML Template, site template, seo, marketing, creative, corporate, modern, multipurpose, one page, business, responsive, minimal, saas, startup">
-    <meta name="author" content="LiquidThemes">
+        content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
+    <meta name="author" content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta name="description"
-        content="Hub is a HTML template with high performance, and award-winning design collection.">
-    <meta property="og:title" content="Hub HTML template">
+        content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
+    <meta property="og:title" content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:description"
-        content="Hub is a HTML template with high performance, and award-winning design collection.">
+        content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:type" content="website">
     <meta property="image" content="./assets/images/common/MVG.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/images/fav.png">
     <link rel="stylesheet" href="assets/vendors/liquid-icon/lqd-essentials/lqd-essentials.min.css">
     <link rel="stylesheet" href="assets/css/theme.min.css">
     <link rel="stylesheet" href="assets/css/utility.min.css">
