--- a/industries.html
+++ b/industries.html
@@ -11,12 +11,12 @@
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta name="description"
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
-    <meta property="og:title"
+    <!-- <meta property="og:title"
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:description"
         content="MVG - Experts in guiding people to their destinations through digital wayfinding and signage">
     <meta property="og:type" content="website">
-    <meta property="image" content="./assets/images/common/MVG.jpg">
+    <meta property="image" content="./assets/images/common/MVG.jpg"> -->
     <link rel="icon" type="image/x-icon" href="./assets/images/fav.png">
     <link rel="stylesheet" href="assets/vendors/liquid-icon/lqd-essentials/lqd-essentials.min.css">
     <link rel="stylesheet" href="assets/css/theme.min.css">
