--- a/wayfinding.html
+++ b/wayfinding.html
@@ -416,7 +416,7 @@
                     </div>
                 </section>
 
-                <section class="lqd-section our-vision bg-no-repeat bg-cover py-130"
+                <section class="lqd-section our-vision bg-no-repeat bg-cover py-130 mobile_nospace"
                     style="background-image: url(assets/images/demo/asymmetric-agency/our-approach/our-vision.jpg);">
                     <div class="container">
                         <div class="row">
