--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                                             <div
                                                 class="lqd-fancy-menu lqd-custom-menu relative lqd-menu-td-none lqd-magnetic-items">
                                                 <ul class="reset-ul">
-                                                    <li class="mb-25"><a class="text-16 text-black" href="#"><span
+                                                    <li class="mb-25"><a class="text-16 text-black" href="https://www.facebook.com/mvgwayfinder/" target="_blank"><span
                                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                                             <span>Facebook</span></a></li>
 
 
-                                                    <li class="mb-25"><a class="text-16 text-black" href="#"><span
+                                                    <li class="mb-25"><a class="text-16 text-black" href="https://www.instagram.com/mvgsignagewayfinding/" target="_blank"><span
                                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                                             <span>Instagram</span></a></li>
 
