--- a/index.html
+++ b/index.html
@@ -1845,8 +1845,8 @@
                     <div class="row items-center">
                         <div
                             class="w-40percent relative flex flex-wrap content-start lg:w-50percent sm:w-full module-col">
-                            <div class="ld-fancy-heading relative">
-                                <img src="./assets/images/logo_svg.png">
+                            <div class="ld-fancy-heading relative"><a href="./">
+                                <img src="./assets/images/logo_svg.png"></a>
                             </div>
                             <div class="flex justify-start items-center">
                                 <!-- <a href="#contact-modal"
@@ -1893,19 +1893,19 @@
                             </div>
                             <div class="lqd-fancy-menu lqd-custom-menu relative lqd-menu-td-none">
                                 <ul class="reset-ul link-15">
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="./"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Home</a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="wayfinding.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Wayfinding</a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="signage.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Signage </a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="industries.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Industries</a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="products.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Products</a></li>
                                     <!-- <li><a class="text-white-70" href="#"><span
