--- a/wayfinding.html
+++ b/wayfinding.html
@@ -356,7 +356,7 @@
                                     <div class="lqd-imggrp-img-container relative">
                                         <div class="lqd-imggrp-content lqd-imggrp-content-mid w-95 absolute-center">
                                             <div class="lqd-imggrp-content-inner"><a
-                                                    href="https://www.youtube.com/watch?v=WaSvMAl4zPw"
+                                                    href="https://www.youtube.com/channel/UC9SniCHuVHTubE3kq5prVqg" target="_blank"
                                                     class="btn btn-naked fresco btn-icon-block btn-icon-top btn-icon-xl btn-icon-circle btn-icon-bordered btn-icon-ripple text-white"><span
                                                         class="inline-flex items-center py-1/15em px-2/1em transition-all"><span
                                                             class="translate-0 text-white text-26 border-white btn-icon"><i
@@ -1141,7 +1141,8 @@
                         <div
                             class="w-40percent relative flex flex-wrap content-start lg:w-50percent sm:w-full module-col">
                             <div class="ld-fancy-heading relative">
-                                <img src="./assets/images/logo_svg.png">
+                                <a href="./">
+                                <img src="./assets/images/logo_svg.png"></a>
                             </div>
                             <div class="flex justify-start items-center">
                                 <!-- <a href="#contact-modal"
@@ -1188,19 +1189,19 @@
                             </div>
                             <div class="lqd-fancy-menu lqd-custom-menu relative lqd-menu-td-none">
                                 <ul class="reset-ul link-15">
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="./"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Home</a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="wayfinding.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Wayfinding</a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="signage.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Signage </a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="industries.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Industries</a></li>
-                                    <li class="mb-20"><a class="text-white-70" href="#"><span
+                                    <li class="mb-20"><a class="text-white-70" href="products.html"><span
                                                 class="link-icon inline-flex hide-if-empty left-icon icon-next-to-label"></span>
                                             Products</a></li>
                                     <!-- <li><a class="text-white-70" href="#"><span
