--- a/wayfinding-for-hospitals.html
+++ b/wayfinding-for-hospitals.html
@@ -263,7 +263,7 @@
                     </div>
                 </section>
                
-                <section id="way" class="lqd-section faq py-100" data-section-luminosity="light">
+                <section id="way" class="lqd-section faq pb-100" data-section-luminosity="light">
                     <div class="container-fluid">
                         <div class="row items-start">
                             <div class="col col-12 col-lg-7 col-xl-6 p-0 sticky top-30">
