--- a/industries.html
+++ b/industries.html
@@ -493,7 +493,7 @@
                                                             <a href="wayfinding-for-retail.html" class="button btn text-14 font-bold uppercase leading-1em tracking-1 text-white border-2 rounded-10 whitespace-nowrap py-0/6em px-1em mr-10 z-1 text-14 hover:bg-black hover:text-white   animation-element">
                                                                 <span class="btn-txt" data-text="Send a message">WAYFINDER</span>
                                                             </a>
-                                                            <a href="wayfinding-for-hospitals.html" class="button btn text-14 font-bold uppercase leading-1em tracking-1 text-white border-2 rounded-10 whitespace-nowrap py-0/6em px-1em mr-10 z-1 text-14 hover:bg-black hover:text-white   animation-element">
+                                                            <a href="retail-for-signage.html" class="button btn text-14 font-bold uppercase leading-1em tracking-1 text-white border-2 rounded-10 whitespace-nowrap py-0/6em px-1em mr-10 z-1 text-14 hover:bg-black hover:text-white   animation-element">
                                                                 <span class="btn-txt" data-text="Send a message">SIGNAGE</span>
                                                             </a>
                                                         </div>        
@@ -511,7 +511,7 @@
                                                             <a href="wayfinding-for-hospitals.html" class="button btn text-14 font-bold uppercase leading-1em tracking-1 text-white border-2 rounded-10 whitespace-nowrap py-0/6em px-1em mr-10 z-1 text-14 hover:bg-black hover:text-white   animation-element">
                                                                 <span class="btn-txt" data-text="Send a message">WAYFINDER</span>
                                                             </a>
-                                                            <a href="wayfinding-for-hospitals.html" class="button btn text-14 font-bold uppercase leading-1em tracking-1 text-white border-2 rounded-10 whitespace-nowrap py-0/6em px-1em mr-10 z-1 text-14 hover:bg-black hover:text-white   animation-element">
+                                                            <a href="retail-for-signage.html" class="button btn text-14 font-bold uppercase leading-1em tracking-1 text-white border-2 rounded-10 whitespace-nowrap py-0/6em px-1em mr-10 z-1 text-14 hover:bg-black hover:text-white   animation-element">
                                                                 <span class="btn-txt" data-text="Send a message">SIGNAGE</span>
                                                             </a>
                                                         </div>    
